Closed Bug 512366 Opened 16 years ago Closed 16 years ago

NJ merge: insert some missing assembler bits

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: graydon, Assigned: graydon)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch copy some codeSplinter Review
These parts are missing from a few of our assembler backend files, but present in Tamarin's.
Attachment #396335 - Flags: review?(dvander)
Attachment #396335 - Flags: review?(dvander) → review+
http://hg.mozilla.org/tracemonkey/rev/ac8e4290f01c with http://hg.mozilla.org/tracemonkey/rev/f8f01bdf7c15 as followup to fix build breakage (Sorry, interacts poorly with bug 507117, that I landed along the way and stupidly didn't re-test the combination of.)
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: