Bug 512366 - insert some missing assembler bits, r=dvander.